@@ -4,19 +4,26 @@ import java.util.Arrays;
 import java.util.List;
 
 public enum TipoPrenda {
-  CAMISA_MANGA_LARGA(Categoria.PARTE_SUPERIOR, Arrays.asList(Material.LANA, Material.ALGODON, Material.SEDA,Material.ACETATO,Material.PIQUE)),
-  CAMISA_MANGA_CORTA(Categoria.PARTE_SUPERIOR, Arrays.asList(Material.LANA, Material.ALGODON, Material.SEDA,Material.ACETATO,Material.PIQUE)),
-  CHOMBA(Categoria.PARTE_SUPERIOR, Arrays.asList(Material.LANA, Material.ALGODON, Material.SEDA,Material.ACETATO,Material.PIQUE)),
+  CAMISA_MANGA_LARGA(Categoria.PARTE_SUPERIOR,
+      Arrays.asList(Material.LANA, Material.ALGODON,
+          Material.SEDA, Material.ACETATO, Material.PIQUE)),
+  CAMISA_MANGA_CORTA(Categoria.PARTE_SUPERIOR, Arrays.asList(Material.LANA,
+      Material.ALGODON, Material.SEDA, Material.ACETATO, Material.PIQUE)),
+  CHOMBA(Categoria.PARTE_SUPERIOR, Arrays.asList(Material.LANA, Material.ALGODON,
+      Material.SEDA, Material.ACETATO, Material.PIQUE)),
 
-  JEAN(Categoria.PARTE_INFERIOR, Arrays.asList(Material.LANA, Material.ALGODON, Material.SEDA,Material.ACETATO)),
-  JOGGING(Categoria.PARTE_INFERIOR, Arrays.asList(Material.LANA, Material.ALGODON, Material.SEDA,Material.ACETATO)),
+  JEAN(Categoria.PARTE_INFERIOR, Arrays.asList(Material.LANA, Material.ALGODON,
+      Material.SEDA, Material.ACETATO)),
+  JOGGING(Categoria.PARTE_INFERIOR, Arrays.asList(Material.LANA, Material.ALGODON,
+      Material.SEDA, Material.ACETATO)),
   ZAPATOS(Categoria.CALZADO, Arrays.asList(Material.CUERO, Material.CUERINA)),
   ZAPATILLAS(Categoria.CALZADO, Arrays.asList(Material.CUERO, Material.CUERINA)),
   GORRA(Categoria.ACCESORIOS, Arrays.asList(Material.LANA, Material.ALGODON)),
-  ANTEOJOS_DE_SOL(Categoria.ACCESORIOS, Arrays.asList(Material.PLASTICO));
+  ANTEOJOS_DE_SOL(Categoria.ACCESORIOS, List.of(Material.PLASTICO));
 
 
-  //la palabra clave final se usa para indicar que un elemento no puede ser modificado después de su inicialización.
+  //la palabra clave final se usa para indicar que un elemento
+  // no puede ser modificado después de su inicialización.
 
   private final Categoria categoria;
   private final List<Material> materialesCompatibles;
